<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Foyer">

    <!--
      https://www.youtube.com/watch?v=-vAI7RSPxOA
      error inflating class fragment
      https://stackoverflow.com/questions/33149705/error-inflating-class-fragment?rq=3
    -->

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.haunted.Test"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/foyerText"
        android:layout_width="337dp"
        android:layout_height="199dp"
        android:gravity="center_vertical"
        android:text="@string/desc_foyer"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <ImageView
        android:id="@+id/foyerImage"
        android:layout_width="match_parent"
        android:layout_height="283dp"
        android:src="@drawable/hall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

<!--
    <TextView
        android:id="@+id/health"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/health"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/hp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hp"
        android:layout_width="70dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="100"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/health"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gear"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/gear" />
 -->

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <Button
            android:id="@+id/stairs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stairs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.762" />

        <Button
            android:id="@+id/outside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.885"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.762" />

        <Button
            android:id="@+id/hall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.762" />

    </androidx.constraintlayout.widget.ConstraintLayout>